monticore-generator/src/test/resources/cocos/invalid/A4090/A4090j.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4090;

grammar A4090j {

  A = "a";
  C = "c";
  B = A a:C;

}
